# ArkShimmerReverb

./: CMakeLists.txt  INSTRUCCIONES_COMPILAR_ONLINE.md  README.md  build_mac.sh  build_windows.ps1
.github/workflows/: build-windows-vst3.yml
Presets/: FactoryPresets.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ArkDSP.h
